--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.scss
@@ -1,64 +1,26 @@
 @import 'variables';
 
-.users-left,
-.users-amount {
-  strong {
-    margin: 0 4px;
-    text-decoration: underline;
-  }
-}
-.users-left {
-  strong {
-    color: var(--stf-primary);
-  }
+h3 {
+  margin-bottom: rhythm(2)
 }
 
 .add-user {
-  width: 775px;
-  margin-bottom: 36px;
+  align-items: center;
+  display: flex;
+  gap: rhythm(3);
+  margin-bottom: rhythm(7);
 
-  form {
-    align-items: center;
-    display: flex;
-    gap: rhythm(3);
-  }
-  input {
-    flex: 1 1 0;
-  }
-  pa-select {
-    min-width: rhythm(12);
+  pa-input {
+    width: rhythm(48);
   }
 }
 
-.user-table {
-  width: 775px;
-  padding: 24px 38px 40px 38px;
-  border-spacing: 0;
-  border-collapse: separate;
-  background-color: #fff;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+.users-list-header {
+  display: flex;
+  justify-content: space-between;
+}
 
-  th {
-    padding-bottom: 3px;
-    border-bottom: 1px solid #000;
-  }
-
-  td {
-    height: 55px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  }
-
-  .cdk-column-name {
-    width: 63%;
-  }
-  .cdk-column-role {
-    width: 120px;
-    text-align: center;
-    select {
-      width: 120px;
-    }
-  }
-  .cdk-column-actions {
-    text-align: right;
-  }
+.actions {
+  text-align: right;
+  width: 100%;
 }
