--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -28,13 +28,23 @@
           [ngTemplateOutletContext]="{ param: 'paragraphs_processed' }"></ng-container>
         <div class="separator"></div>
         <h3 class="title-m">{{ 'billing.quotas.search_inference' | translate }}</h3>
-        <pa-checkbox [(value)]="selfHosted">Self hosted</pa-checkbox>
+        <pa-checkbox
+          [value]="selfHosted"
+          (valueChange)="toggleSelfHosted()">
+          Self hosted
+        </pa-checkbox>
         <ng-container
           [ngTemplateOutlet]="sliderTemplate"
-          [ngTemplateOutletContext]="{ param: 'searches' }"></ng-container>
+          [ngTemplateOutletContext]="{
+            param: 'searches',
+            text: 'billing.quotas.searches'
+          }"></ng-container>
         <ng-container
           [ngTemplateOutlet]="sliderTemplate"
-          [ngTemplateOutletContext]="{ param: 'generative' }"></ng-container>
+          [ngTemplateOutletContext]="{
+            param: 'generative',
+            text: 'billing.quotas.answers'
+          }"></ng-container>
         <div class="separator"></div>
         <h3 class="title-m">{{ 'billing.quotas.train' | translate }}</h3>
         <ng-container
@@ -42,7 +52,8 @@
           [ngTemplateOutletContext]="{ param: 'training' }"></ng-container>
         <ng-template
           #sliderTemplate
-          let-param="param">
+          let-param="param"
+          let-text="text">
           <div>
             <div class="field-block">
               <pa-slider
@@ -50,7 +61,7 @@
                 [max]="maxValue(getUnitPrice(tier, param), prices[tier].usage[param].threshold)"
                 [value]="values[param]"
                 (valueChange)="update(param, $event)">
-                <span class="title-xxs">{{ 'billing.parameter.' + param | translate }}</span>
+                <span class="title-xxs">{{ text || 'billing.parameter.' + param | translate }}</span>
               </pa-slider>
               <div class="price">{{ calculatePrice(param) | currency : currency }}</div>
             </div>
