[sc-6564] Allow to manage zones in manager

--- a/apps/manager-v2/src/app/app-layout/app-layout.component.html
+++ b/apps/manager-v2/src/app/app-layout/app-layout.component.html
@@ -18,6 +18,11 @@
         routerLinkActive="active">
         Users
       </li>
+      <li
+        routerLink="zones"
+        routerLinkActive="active">
+        Zones
+      </li>
     </ul>
   </nav>
   <pa-avatar
