Support new account types

--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -20,12 +20,12 @@
       help="ALL testing account MUST be Trial"
       formControlName="type">
       <pa-option value="stash-trial">Trial</pa-option>
-      <pa-option value="stash-basic">Basic</pa-option>
-      <pa-option value="stash-team">Teams</pa-option>
       <pa-option value="stash-enterprise">Enterprise</pa-option>
       <pa-option value="stash-business">Business</pa-option>
       <pa-option value="stash-developer">Developer</pa-option>
       <pa-option value="stash-startup">Startup</pa-option>
+      <pa-option value="stash-starter">Starter</pa-option>
+      <pa-option value="stash-growth">Growth</pa-option>
     </pa-select>
 
     <pa-button
