--- a/libs/common/src/lib/features/features-modal.component.html
+++ b/libs/common/src/lib/features/features-modal.component.html
@@ -1,9 +1,11 @@
 <pa-modal-advanced>
   <pa-modal-title>{{ 'features.customize_features' | translate }}</pa-modal-title>
   <pa-modal-content>
-    <div *ngFor="let feature of features || {} | keyvalue">
-      <pa-checkbox [(value)]="features[feature.key] || false">{{ feature.key }}</pa-checkbox>
-    </div>
+    <ng-container *ngIf="features">
+      <div *ngFor="let feature of features | keyvalue">
+        <pa-checkbox [(value)]="features[feature.key]">{{ feature.key }}</pa-checkbox>
+      </div>
+    </ng-container>
   </pa-modal-content>
   <pa-modal-footer>
     <pa-button
