--- a/apps/dashboard/src/app/account/account-manage/account-manage.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-manage.component.html
@@ -113,25 +113,28 @@
 
   <div class="section">
     <div class="section-container">
-      <h2>{{ 'account.delete_account' | translate }}</h2>
-
       <div class="dangerous-zone">
-        <div class="dangerous-zone-title">{{ 'generic.dangerous' | translate }}</div>
-        <div class="dangerous-zone-warning">
-          <div>{{ 'account.delete_account_warning_1' | translate : { account: account?.title || '' } }}</div>
+        <h3 class="title-s">{{ 'account.delete_account' | translate }}</h3>
+        <div *ngIf="(isSubscribed | async) === false">
+          <p>{{ 'account.delete_account_warning_1' | translate : { account: account?.title || '' } }}</p>
           <ul>
             <li>{{ 'account.delete_account_warning_2' | translate }}</li>
             <li>{{ 'account.delete_account_warning_3' | translate }}</li>
             <li>{{ 'account.delete_account_warning_4' | translate }}</li>
           </ul>
+          <pa-button
+            kind="destructive"
+            (click)="deleteAccount()">
+            {{ 'generic.delete' | translate }}
+          </pa-button>
         </div>
-        <pa-button
-          kind="destructive"
-          icon="trash"
-          iconAndText
-          (click)="deleteAccount()">
-          {{ 'generic.delete' | translate }}
-        </pa-button>
+        <div *ngIf="(isSubscribed | async) === true">
+          <p>{{ 'account.delete.subscription_detected' | translate }}</p>
+          <p>
+            {{ 'account.delete.go_to' | translate }}
+            <a [routerLink]="deleteAccountUrl | async">{{ 'account.billing' | translate }}</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
