Add new option in widget generator page

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -53,6 +53,13 @@
             {{ 'stash.widgets.suggestions' | translate }}
           </pa-toggle>
           <pa-toggle
+            *ngIf="canSuggestEntities | async"
+            labelOnRight
+            help="stash.widgets.suggestEntities.help"
+            formControlName="suggestEntities">
+            {{ 'stash.widgets.suggestEntities' | translate }}
+          </pa-toggle>
+          <pa-toggle
             *ngIf="isTrainingEnabled | async"
             labelOnRight
             help="stash.widgets.suggestLabels.help"
