[sc-6664]: Improve search results UI
- don't display time or page indicator when we don't have one
- use button instead of div element for indicators for better accessibility
- display field metadata on result row
- display an expander button when all metadata don't fit on one line

--- a/libs/search-widget/src/common/indicators/_indicator.scss
+++ b/libs/search-widget/src/common/indicators/_indicator.scss
@@ -2,13 +2,15 @@
   align-items: center;
   background: var(--color-neutral-lightest);
   border-radius: var(--rhythm-4);
+  border: none;
   color: var(--color-dark-stronger);
   cursor: pointer;
   display: flex;
   font-size: var(--font-size-medium);
+  font-family: var(--font-family-body);
+  font-weight: var(--font-weight-body);
   gap: var(--rhythm-0_25);
   line-height: var(--rhythm-3);
-  max-width: var(--rhythm-9);
   padding: 0 var(--rhythm-1);
   position: relative;
   transition: background-color var(--transition-superfast);
