--- a/libs/search-widget/src/common/indicators/TimeIndicator.scss
+++ b/libs/search-widget/src/common/indicators/TimeIndicator.scss
@@ -1,6 +1,6 @@
 @import 'indicator';
 .sw-time-indicator {
-  padding: 0 var(--rhythm-1_5) 0 var(--rhythm-1);
+  padding: 0 var(--rhythm-1) 0 var(--rhythm-0_5);
 
   &.minimized {
     border-radius: 50%;
