--- a/libs/common/src/lib/resources/resource-list/error-resources-table/error-resources-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/error-resources-table/error-resources-table.component.html
@@ -2,7 +2,7 @@
   <div
     class="resource-bulk-actions"
     *ngIf="(isAdminOrContrib | async) && selection.length > 0">
-    {{ 'resource.selected_count' | translate: { num: allErrorsSelected ? errorCount : selection.length } }}
+    {{ 'resource.selected_count' | translate : { num: allErrorsSelected ? errorCount : selection.length } }}
 
     <ng-container *ngIf="selection.length > 0">
       <pa-button
@@ -26,7 +26,7 @@
           kind="primary"
           *ngIf="!allErrorsSelected"
           (click)="selectAllErrors()">
-          {{ 'resource.select-all-failures' | translate: { count: errorCount } }}
+          {{ 'resource.select-all-failures' | translate : { count: errorCount } }}
         </pa-button>
         <pa-button
           aspect="basic"
@@ -49,7 +49,9 @@
 <div class="table-container">
   <pa-infinite-scroll (reachAnchor)="onLoadMore()">
     <pa-table [columns]="tableLayout | async">
-      <pa-table-sortable-header [cells]="headerCells | async">
+      <pa-table-sortable-header
+        [cells]="headerCells | async"
+        (sort)="sortBy($event)">
         <pa-table-cell
           header
           *ngIf="isAdminOrContrib | async">
@@ -91,7 +93,7 @@
         </pa-table-cell>
 
         <pa-table-cell center>
-          <span class="body-s">{{ row.resource.created | formatDate: { default: true } }}</span>
+          <span class="body-s">{{ row.resource.created | formatDate : { default: true } }}</span>
         </pa-table-cell>
         <pa-table-cell-menu *ngIf="isAdminOrContrib | async">
           <pa-button
