Fix email input in profile component

--- a/libs/common/src/lib/user/profile/profile.component.html
+++ b/libs/common/src/lib/user/profile/profile.component.html
@@ -35,6 +35,7 @@
             id="email"
             required
             type="email"
+            externalLabel
             [errorMessages]="profile_validation_messages.email"></pa-input>
         </div>
       </div>
