Fix use_case field values to match with HubSpot values

--- a/libs/common/src/lib/user/onboarding/onboarding.component.html
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.html
@@ -34,9 +34,9 @@
             [errorMessages]="validationMessages.use_case">
             <pa-option value="Customer / employee support">{{ 'onboarding.use_case.support' | translate }}</pa-option>
             <pa-option value="Global site search">{{ 'onboarding.use_case.global_search' | translate }}</pa-option>
-            <pa-option value="Workspace Search">{{ 'onboarding.use_case.workspace_search' | translate }}</pa-option>
+            <pa-option value="Workspace search">{{ 'onboarding.use_case.workspace_search' | translate }}</pa-option>
             <pa-option value="Research & Analysis">{{ 'onboarding.use_case.research_analysis' | translate }}</pa-option>
-            <pa-option value="AI model training">{{ 'onboarding.use_case.ai_training' | translate }}</pa-option>
+            <pa-option value="Model Training">{{ 'onboarding.use_case.ai_training' | translate }}</pa-option>
             <pa-option value="Other">{{ 'onboarding.use_case.other' | translate }}</pa-option>
           </pa-select>
         </div>
