Use translation from both common and user libs in dashboard and contributor
- add and configure ngx-translate-multi-http-loader
- move onboarding translations to user lib

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -64,7 +64,7 @@
           kind="destructive"
           aspect="basic"
           (click)="deleteSampleDataset()">
-          {{ 'onboarding.dataset.delete' | translate }}
+          {{ 'dataset.delete' | translate }}
         </pa-button>
       </ng-container>
     </div>
