--- a/libs/common/src/lib/resources/sample-dataset/dataset-selector/dataset-selector.component.html
+++ b/libs/common/src/lib/resources/sample-dataset/dataset-selector/dataset-selector.component.html
@@ -7,6 +7,6 @@
   <pa-button
     [disabled]="!selectDataset || importing"
     (click)="importDataset()">
-    {{ 'onboarding.dataset.import' | translate }}
+    {{ 'dataset.import' | translate }}
   </pa-button>
 </div>
